objects/tspa__Visual_Remote_Assistant_Statistics__c.object
<CustomObject>
    <fields>
        <fullName>tspa__Active_Users_Session_Average__c</fullName>
        <label>Active Users Session Average</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__Current_Number_of_Sessions__c</fullName>
        <description>Current Annual Session number based on session average value for last 30 days</description>
        <label>Current Number of Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__Current_Value__c</fullName>
        <formula>tspa__Current_Number_of_Sessions__c *  tspa__Session_Average_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__DeveloperName__c</fullName>
        <externalId>true</externalId>
        <label>DeveloperName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tspa__Potential_Number_of_Sessions__c</fullName>
        <description>Potential Annual session number</description>
        <label>Potential Number of Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__Potential_Value__c</fullName>
        <formula>tspa__Potential_Number_of_Sessions__c *  tspa__Session_Average_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Average_Value__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Session Average Value</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tspa__Top_25_Users_Session_Average__c</fullName>
        <label>Top 25% Users Session Average</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Visual Remote Assistant Statistics</label>
    <listViews>
        <fullName>tspa__All</fullName>
        <columns>NAME</columns>
        <columns>tspa__DeveloperName__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STAT-{000}</displayFormat>
        <label>Visual Remote Assistant Statistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>tspa__Value_Greater_Than_1</fullName>
        <active>true</active>
        <errorConditionFormula>tspa__Session_Average_Value__c &lt; 1</errorConditionFormula>
        <errorDisplayField>tspa__Session_Average_Value__c</errorDisplayField>
        <errorMessage>The minimum value is 1.</errorMessage>
    </validationRules>
</CustomObject>